# python_gwtransport1d

./: README.md  pyproject.toml  ruff.toml  ruff_defaults.toml
examples/: deposition_computation.py
src/gwtransport1d/: __init__.py  advection.py  deposition.py  residence_time.py
